// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionDeleteRecord Dialog operator Renders the component 1`] = `
<fragment-stub><span><div data-test="play-item" class="v-list-item__title">
          Delete Session Record
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="play-icon" class="v-icon notranslate v-icon--disabled v-icon--left mdi mdi-playlist-remove theme--light"></i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`SessionDeleteRecord Dialog owner Renders the component 1`] = `
<fragment-stub><span><div data-test="play-item" class="v-list-item__title">
          Delete Session Record
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="play-icon" class="v-icon notranslate v-icon--left mdi mdi-playlist-remove theme--light"></i></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`SessionDeleteRecord Icon operator Renders the component 1`] = `
<fragment-stub><span><div data-test="play-item" class="v-list-item__title">
          Delete Session Record
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="play-icon" class="v-icon notranslate v-icon--disabled v-icon--left mdi mdi-playlist-remove theme--light"></i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`SessionDeleteRecord Icon owner Renders the component 1`] = `
<fragment-stub><span><div data-test="play-item" class="v-list-item__title">
          Delete Session Record
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="play-icon" class="v-icon notranslate v-icon--left mdi mdi-playlist-remove theme--light"></i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;
